<resources>
    <string name="app_name">Uzoefu App</string>
    <string name="forgotten_password"><u>Forgotten Password?</u></string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No Data Found !</string>

    <string-array name="cities">
        <item>Johannesburg</item>
        <item>Cape Town</item>
        <item>Durban</item>
    </string-array>

    <string-array name="radius_options">
        <item>2 Kilometres</item>
        <item>5 Kilometres</item>
        <item>10 Kilometres</item>
    </string-array>

    <string-array name="all_activity">
        <item>All Activities</item>
    </string-array>

    <string-array name="all_branches">
        <item>All Branches</item>
    </string-array>

    <string-array name="monthly">
        <item>Monthly</item>
    </string-array>

    <string name="title_activity_booking_detail_step1">BookingDetailStep1Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="onboarding_title">Explore</string>
    <string name="onboarding_description">Uncover hidden gems and popular activities</string>
    <string name="skip">Skip</string>
    <string name="unable_to_connect">unable to connect</string>
    <string name="server_error">Server error</string>
    <string name="OK">Ok</string>
    <string name="cancelled">Cancelled</string>
    <string name="please_wait">Please Wait...</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="must_be_atleast_8_character">Must be at least 8 character</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>


</resources>