<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_color"
    tools:context=".forgetPasswordActivites.ResetPasswordActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green_color"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arrowBack"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/leftarrow"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_new_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/must_be_atleast_8_character"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/only_button_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintWidth_percent="0.9">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:src="@drawable/passwordshow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/green_color" />

            <EditText
                android:id="@+id/old_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#A5A5A5"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/emailIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/only_button_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1"
            app:layout_constraintWidth_percent="0.9">

            <ImageView
                android:id="@+id/confirmIcon"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:src="@drawable/passwordshow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/green_color" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#A5A5A5"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/confirmIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/layout3"
            app:layout_constraintStart_toStartOf="@+id/layout3"
            app:layout_constraintTop_toBottomOf="@+id/layout3"
            app:layout_constraintWidth_percent=".9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>